apps/argocd/overlays/prod/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd-prod
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.lab.supermorphic.com`)
      kind: Rule
      services:
        - name: argocd-server
          namespace: argocd
          port: 80
  tls:
    secretName: argocd-server-tls
